org/kermeta/language/org.kermeta.language.checker/src/test/resources/resolved/invalid/Assignment/Assignment_003/003_AssignmentTest_ParametersAreImmutable.kmt

using kermeta::standard
using kermeta::io

package test {

class MainClass
{
    
    
     operation assertSimilar(expected: String, actual: String): Void is
        do  
        
        
            expected := "tutu18"
            //a:="tutu18"
            
        end
   
}

}